--- a/css/style.css
+++ b/css/style.css
@@ -501,7 +501,7 @@ th:last-child, td:last-child { border-right: rgba(255, 255, 255, 0); }
 /* Home page style */
 /* ****************************************************************** */
 .js-home-content {
-    background: url('../images/bg/GNU.png') no-repeat right;
+    background: url('../images/bg/Ink-Wallpaper-02-1920x1080.jpg') no-repeat right;
     background-size: 40%;
 }
 
